--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bokor&family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&family=Lobster&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Lavishly+Yours&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="profile">
@@ -19,10 +20,14 @@
         </div>
         <h1 id="nom">ChukyX7</h1>
         <img id="profileImg" src="./images/main/chukyx7_budgie_business_man_9ed91f80-358a-4869-b436-5097d11c3ecb.png" alt="ChukyX7_profile_picture">
-        <audio autoplay>
-            <source src="./que-te-vote-chapote-sanchez.mp3" type="audio/mpeg">
+    </div>
+    <div id="nadal">
+        <img id="gorraNadal" src="./images/main/Gorro-De-Navidad-PNG-File.png" alt="nadal">
+        <audio controls>
+            <source src="./images/main/Mariah Carey - All I Want for Christmas Is You.mp3" type="audio/mpeg">
             Tu navegador no soporta el elemento de audio.
         </audio>
+        <h3>Bon Nadal</h3>
     </div>
 </body>
 </html>
