--- a/Preciari.html
+++ b/Preciari.html
@@ -7,6 +7,31 @@
     <link rel="stylesheet" href="./assets/css/estil3.css">
 </head>
 <body>
-    
+    <div id="container">
+        <div class="plans" id="pla1">
+            <h3>Light Weight</h3>
+            <h1>31.90€/mes</h1>
+            <h5>Subscripció d'un mes</h5>
+            <h5>Sense accés a activitats monitoritzades</h5>
+            <h5>Sense accés a la pista de pàdel</h5>
+            <h5>Subscriu-te</h5>
+        </div>
+        <div class="plans" id="pla2">
+            <h3>Stronger</h3>
+            <h1>28.90€/mes</h1>
+            <h5>Subscripció de tres mesos</h5>
+            <h5>Amb accés a activitats monitoritzades</h5>
+            <h5>Sense accés a la pista de pàdel</h5>
+            <h5>Subscriu-te</h5>
+        </div>
+        <div class="plans" id="pla3">
+            <h3>Weight Master</h3>
+            <h1>24.90€/mes</h1>
+            <h5>Subscripció d'un any</h5>
+            <h5>Amb accés a activitats monitoritzades</h5>
+            <h5>Amb accés a la pista de pàdel</h5>
+            <h5>Subscriu-te</h5>
+        </div>
+    </div>
 </body>
 </html>
